[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fps_controller.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.3
height = 0.9

[sub_resource type="CapsuleMesh" id=2]
radius = 0.3
mid_height = 1.15

[sub_resource type="Animation" id=3]
resource_name = "CROUCH"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.9, 0.01 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -0.45, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("feet:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -1.45, 0 ), Vector3( 0, -0.55, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ray_slope:cast_to")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -2.35, 0 ), Vector3( 0, -1.2, 0 ) ]
}

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0.176471, 0.176471, 1 )

[sub_resource type="CubeMesh" id=5]
material = SubResource( 4 )
size = Vector3( 0.1, 0.1, 0.5 )

[sub_resource type="ViewportTexture" id=6]
viewport_path = NodePath("Viewport")

[node name="fps_controller" type="KinematicBody" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, -0.45, 0 )
shape = SubResource( 1 )

[node name="yaw" type="Spatial" parent="."]

[node name="head" type="Spatial" parent="yaw"]

[node name="Camera" type="Camera" parent="yaw/head"]
cull_mask = 1048573

[node name="ray_climb1" type="RayCast" parent="yaw"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0 )
enabled = true
cast_to = Vector3( 0, 0, -0.5 )

[node name="ray_climb2" type="RayCast" parent="yaw"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4, 0 )
enabled = true
cast_to = Vector3( 0, 0, -0.5 )

[node name="ray_climb3" type="RayCast" parent="yaw"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, -0.45 )
enabled = true
cast_to = Vector3( 0, -0.8, 0 )

[node name="feet" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.45, 0 )

[node name="ray_slope" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -2.35, 0 )

[node name="body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0.005, -0.575, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CROUCH = SubResource( 3 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1024, 600 )
transparent_bg = true
shadow_atlas_size = 1

[node name="Camera_hand" type="Camera" parent="Viewport"]
cull_mask = 2
current = true

[node name="MeshInstance" type="MeshInstance" parent="Viewport/Camera_hand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.119375, -0.116311, -0.288427 )
layers = 2
mesh = SubResource( 5 )
material/0 = null

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, -1 )
texture = SubResource( 6 )
offset = Vector2( 512, -300 )
